<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.hsgamer</groupId>
    <artifactId>betterboard</artifactId>
    <version>2.3-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>BetterBoard</name>

    <properties>
        <java.version>11</java.version>
        <core.version>4.3.7</core.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub OWNER Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/HSGamer/BetterBoard</url>
        </repository>
    </distributionManagement>

    <build>
        <finalName>${project.name}-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <relocations>
                                <relocation>
                                    <pattern>me.hsgamer.hscore</pattern>
                                    <shadedPattern>me.hsgamer.betterboard.lib.core</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>fr.mrmicky.fastboard</pattern>
                                    <shadedPattern>me.hsgamer.betterboard.lib.board</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.ezylang.evalex</pattern>
                                    <shadedPattern>me.hsgamer.betterboard.lib.evalex</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.bstats</pattern>
                                    <shadedPattern>me.hsgamer.betterboard.lib.bstats</shadedPattern>
                                </relocation>
                            </relocations>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/maven/**</exclude>
                                        <exclude>META-INF/MANIFEST.MF</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>.</directory>
                <includes>
                    <include>LICENSE</include>
                </includes>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>sonatype-oss</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>viaversion-repo</id>
            <url>https://repo.viaversion.com</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.16.5-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.hsgamer</groupId>
            <artifactId>hscore-bukkit-baseplugin</artifactId>
            <version>${core.version}</version>
        </dependency>
        <dependency>
            <groupId>me.hsgamer</groupId>
            <artifactId>hscore-builder</artifactId>
            <version>${core.version}</version>
        </dependency>
        <dependency>
            <groupId>me.hsgamer</groupId>
            <artifactId>hscore-common</artifactId>
            <version>${core.version}</version>
        </dependency>
        <dependency>
            <groupId>me.hsgamer</groupId>
            <artifactId>hscore-bukkit-config</artifactId>
            <version>${core.version}</version>
        </dependency>
        <dependency>
            <groupId>me.hsgamer</groupId>
            <artifactId>hscore-bukkit-utils</artifactId>
            <version>${core.version}</version>
        </dependency>
        <dependency>
            <groupId>me.hsgamer</groupId>
            <artifactId>hscore-config-path</artifactId>
            <version>${core.version}</version>
        </dependency>
        <dependency>
            <groupId>me.hsgamer</groupId>
            <artifactId>hscore-expression</artifactId>
            <version>${core.version}</version>
        </dependency>
        <dependency>
            <groupId>me.hsgamer</groupId>
            <artifactId>hscore-variable</artifactId>
            <version>${core.version}</version>
        </dependency>
        <dependency>
            <groupId>me.hsgamer</groupId>
            <artifactId>hscore-bukkit-variable</artifactId>
            <version>${core.version}</version>
        </dependency>
        <dependency>
            <groupId>fr.mrmicky</groupId>
            <artifactId>fastboard</artifactId>
            <version>2.0.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.viaversion</groupId>
            <artifactId>viaversion-api</artifactId>
            <version>4.7.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.ProtocolSupport</groupId>
            <artifactId>ProtocolSupport</artifactId>
            <version>5fe4567b79</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.0.0</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>
